<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>narval_wrench_system</name>
  <version>0.0.1</version>
  <description>Handling joystick input and create wrench.</description>
  <maintainer email="piotrflak@student.agh.edu.pl">Piotr Flak</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>ds4_driver_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ds4_driver_msgs</exec_depend>
  <exec_depend>ds4_driver</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
